button firefox fix

--- a/src/assets/sass/theme_core/_buttons.scss
+++ b/src/assets/sass/theme_core/_buttons.scss
@@ -44,6 +44,7 @@ body {
         }
 
         &.ui-button-icon-only {
+            overflow: hidden;
             width: $buttonIconOnlyWidth;
 
             .ui-button-text {
@@ -121,7 +122,7 @@ body {
                 border-color: $toggleButtonActiveFocusBorderColor;
                 color: $toggleButtonActiveFocusTextColor;
                 outline: $toggleButtonFocusOutline;
-    
+
                 .ui-button-icon-left {
                     color: $toggleButtonActiveFocusIconColor;
                 }
@@ -135,37 +136,37 @@ body {
             border: $toggleButtonBorder;
             color: $toggleButtonTextColor;
             @include transition($buttonTransition);
-    
+
             .ui-button-icon-left {
                 color: $toggleButtonIconColor;
             }
-    
+
             &:not(.ui-state-disabled):not(.ui-state-active):hover {
                 background-color: $toggleButtonHoverBgColor;
                 border-color: $toggleButtonHoverBorderColor;
                 color: $toggleButtonHoverTextColor;
-    
+
                 .ui-button-icon-left {
                     color: $toggleButtonHoverIconColor;
                 }
             }
-    
+
             &:not(.ui-state-disabled):not(.ui-state-active).ui-state-focus {
                 background-color: $toggleButtonFocusBgColor;
                 border-color: $toggleButtonFocusBorderColor;
                 color: $toggleButtonFocusTextColor;
                 outline: $toggleButtonFocusOutline;
-    
+
                 .ui-button-icon-left {
                     color: $toggleButtonFocusIconColor;
                 }
             }
-    
+
             &.ui-state-active {
                 background-color: $toggleButtonActiveBgColor;
                 border-color: $toggleButtonActiveBorderColor;
                 color: $toggleButtonActiveTextColor;
-    
+
                 .ui-button-icon-left {
                     color: $toggleButtonActiveIconColor;
                 }
@@ -174,18 +175,18 @@ body {
                     background-color: $toggleButtonActiveHoverBgColor;
                     border-color: $toggleButtonActiveHoverBorderColor;
                     color: $toggleButtonActiveHoverTextColor;
-    
+
                     .ui-button-icon-left {
                         color: $toggleButtonActiveHoverIconColor;
                     }
                 }
-    
+
                 &.ui-state-focus {
                     background-color: $toggleButtonActiveFocusBgColor;
                     border-color: $toggleButtonActiveFocusBorderColor;
                     color: $toggleButtonActiveFocusTextColor;
                     outline: $toggleButtonFocusOutline;
-        
+
                     .ui-button-icon-left {
                         color: $toggleButtonActiveFocusIconColor;
                     }
